Add get groups labels by ids method
