# pkg/router/handlers/group.go
@@ -5,6 +5,7 @@ import (
 
 	kube_types "github.com/containerum/kube-client/pkg/model"
 
+	"git.containerum.net/ch/user-manager/pkg/models"
 	m "git.containerum.net/ch/user-manager/pkg/router/middleware"
 	"git.containerum.net/ch/user-manager/pkg/server"
 	"git.containerum.net/ch/user-manager/pkg/umErrors"
@@ -380,4 +381,49 @@ func DeleteGroupHandler(ctx *gin.Context) {
 	}
 
 	ctx.Status(http.StatusAccepted)
+}
+
+// swagger:operation POST /groups/loginid UserGroups GroupListLabelID
+// Get groups list.
+//
+// ---
+// x-method-visibility: public
+// parameters:
+//  - name: body
+//    in: body
+//    schema:
+//      $ref: '#/definitions/IDList'
+// responses:
+//  '200':
+//    description: groups list
+//    schema:
+//      $ref: '#/definitions/LoginID'
+//  default:
+//    $ref: '#/responses/error'
+func GroupListLabelID(ctx *gin.Context) {
+	um := ctx.MustGet(m.UMServices).(server.UserManager)
+
+	var ids models.IDList
+	if err := ctx.ShouldBindWith(&ids, binding.JSON); err != nil {
+		gonic.Gonic(umErrors.ErrRequestValidationFailed().AddDetailsErr(err), ctx)
+		return
+	}
+
+	if len(ids) < 1 {
+		gonic.Gonic(umErrors.ErrRequestValidationFailed().AddDetails("no group ids in request"), ctx)
+		return
+	}
+
+	resp, err := um.GetGroupListLabelID(ctx.Request.Context(), ids)
+	if err != nil {
+		if cherr, ok := err.(*cherry.Err); ok {
+			gonic.Gonic(cherr, ctx)
+		} else {
+			ctx.Error(err)
+			gonic.Gonic(umErrors.ErrUnableGetUsersList(), ctx)
+		}
+		return
+	}
+
+	ctx.JSON(http.StatusOK, resp)
 }
